[package]
name = "voidmap"
version = "1.2.3"
authors = ["Tyler Neely <t@jujit.su>", "Katharina Fey <kookie@spacekookie.de>", "metaory <metaory@gmail.com>"]
description = "terminal mind-map + task tracker + tsdb with human-readable JSON storage"
license = "GPL-3.0"
homepage = "https://github.com/metaory/void-json"
keywords = ["cli", "commandline", "visualization", "ui", "json"]
edition = "2018"

[[bin]]
name = "void"
path = "src/bin/void/main.rs"

[[test]]
name = "test"
path = "test/test.rs"

[features]
default = []

[dependencies]
dirs = "3.0.1"
clap = "2.33.3"
termion = "= 1.5.2"
log = "0.4.11"
lazy_static = "1.4.0"
time = "0.2.22"
getopts = "0.2.21"
rand = "0.7.3"
libc = "0.2.80"
regex = "1.4.2"
unicode-segmentation = "1.6.0"
clippy = { version = "0.0.302", optional = true }
fs2 = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
quickcheck = "0.9.2"

[profile.release]
lto=true
codegen-units=1
